[gd_scene load_steps=15 format=2]

[ext_resource path="res://CreateButton.png" type="Texture" id=1]
[ext_resource path="res://CreateButtonHover.png" type="Texture" id=2]
[ext_resource path="res://CreateButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://foodSharpness.png" type="Texture" id=4]
[ext_resource path="res://foodPeriod.png" type="Texture" id=5]
[ext_resource path="res://mapSize.png" type="Texture" id=6]
[ext_resource path="res://Menu.gd" type="Script" id=7]
[ext_resource path="res://HandleHover.tres" type="StyleBox" id=8]
[ext_resource path="res://Handle.tres" type="StyleBox" id=9]
[ext_resource path="res://HandleHeld.tres" type="StyleBox" id=10]
[ext_resource path="res://text.tres" type="DynamicFont" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 80, 30 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 80, 30 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 80, 30 )

[node name="Menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 7 )

[node name="sharpnessVisual" type="Sprite" parent="."]
position = Vector2( 108.83, 9.57906 )
texture = ExtResource( 4 )
hframes = 7
frame = 3

[node name="sharpnessBar" type="HScrollBar" parent="."]
margin_left = 100.12
margin_top = 19.5791
margin_right = 1060.12
margin_bottom = 115.579
rect_scale = Vector2( 0.125, 0.125 )
hint_tooltip = "Controls the sharpness of the food clumps. Is the edge clear as day or is the clump a cloud?"
focus_neighbour_top = NodePath("../create")
focus_neighbour_bottom = NodePath("../periodBar")
custom_styles/grabber_highlight = ExtResource( 8 )
custom_styles/grabber = ExtResource( 9 )
custom_styles/grabber_pressed = ExtResource( 10 )
min_value = -3.0
max_value = 3.0
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="periodVisual" type="Sprite" parent="."]
position = Vector2( 108.83, 60.8903 )
texture = ExtResource( 5 )
hframes = 5

[node name="periodBar" type="HScrollBar" parent="."]
margin_left = 100.12
margin_top = 70.8903
margin_right = 1060.12
margin_bottom = 166.89
rect_scale = Vector2( 0.125, 0.125 )
hint_tooltip = "Controls the size of the clumps of food pellets."
focus_neighbour_top = NodePath("../sharpnessBar")
focus_neighbour_bottom = NodePath("../mapBar")
custom_styles/grabber_highlight = ExtResource( 8 )
custom_styles/grabber = ExtResource( 9 )
custom_styles/grabber_pressed = ExtResource( 10 )
max_value = 4.0
step = 1.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mapVisual" type="Sprite" parent="."]
position = Vector2( 108.83, 108.834 )
texture = ExtResource( 6 )
hframes = 5
frame = 2

[node name="mapBar" type="HScrollBar" parent="."]
margin_left = 100.12
margin_top = 118.834
margin_right = 1060.12
margin_bottom = 214.834
rect_scale = Vector2( 0.125, 0.125 )
hint_tooltip = "Controls the size of the map."
focus_neighbour_top = NodePath("../periodBar")
focus_neighbour_bottom = NodePath("../create")
custom_styles/grabber_highlight = ExtResource( 8 )
custom_styles/grabber = ExtResource( 9 )
custom_styles/grabber_pressed = ExtResource( 10 )
max_value = 4.0
step = 1.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 120.141
margin_top = 144.0
margin_right = 200.141
margin_bottom = 174.0
hint_tooltip = "Creates the world with the current settings."
focus_neighbour_top = NodePath("../mapBar")
focus_neighbour_bottom = NodePath("../sharpnessBar")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
margin_left = 118.12
margin_top = 4.0
margin_right = 266.12
margin_bottom = 18.0
custom_fonts/font = ExtResource( 11 )
text = "Food Clump Sharpness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="."]
margin_left = 118.12
margin_top = 54.8318
margin_right = 266.12
margin_bottom = 68.8318
custom_fonts/font = ExtResource( 11 )
text = "Food Clump Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label3" type="Label" parent="."]
margin_left = 118.12
margin_top = 102.611
margin_right = 266.12
margin_bottom = 116.611
custom_fonts/font = ExtResource( 11 )
text = "Map Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="."]
margin_left = 3.62427
margin_top = 4.80426
margin_right = 63.6243
margin_bottom = 24.8043
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="create" to="." method="_on_create_button_down"]
[connection signal="button_down" from="Tutorial" to="." method="_on_Tutorial_button_down"]
